syntax = "proto3";

package online_shop.management.v1;

import "pagination_management.proto";

option go_package = "github.com/lvlBA/online_shop/management;management";

service SiteService {
  // CreateSite - implements (this is a comment for public API)
  rpc CreateSite(CreateSideRequest) returns (CreateSideResponse) {}
  rpc GetSite(GetSiteRequest) returns (GetSiteResponse) {}
  rpc DeleteSite(DeleteSiteRequest) returns (DeleteSiteResponse) {}
  rpc ListSites(ListSitesRequest) returns (ListSitesResponse) {}
}

message Site {
  string id = 1;
  string name = 2;
}

message CreateSideRequest {
  string name = 1;
}

message CreateSideResponse {
  Site site = 1;
}

message GetSiteRequest {
  string id = 1;
}

message GetSiteResponse {
  Site site = 1;
}

message DeleteSiteRequest {
  string id = 1;
}

message DeleteSiteResponse {
}

message ListSitesRequest {
  Pagination pagination = 1;
}

message ListSitesResponse {
repeated Site sites = 1;
}

