syntax = "proto3";

package online_shop.passport.v1;

option go_package = "github.com/lvlBA/online_shop/passport;passport";

service AuthService {
  rpc GetUserToken (GetUserTokenRequest) returns (GetUserTokenResponse){}
  rpc SetUserAccess (SetUserAccessRequest) returns (SetUserAccessResponse){}
  rpc DeleteUserToken (DeleteUserTokenRequest) returns (DeleteUserTokenResponse){}
  rpc CheckUserAccess (CheckUserAccessRequest) returns (CheckUserAccessResponse){}
  rpc DeleteUserAccess (DeleteUserAccessRequest) returns (DeleteUserAccessResponse){}
}

message Auth {
  string id = 1;
  string login = 2;
  string token = 3;
}

message SetUserAccessRequest {
  string user_id = 1;
  string resource_id = 2;
}

message SetUserAccessResponse {

}
message DeleteUserAccessRequest {
  string user_id = 1;
  string resource_id = 2;}

message DeleteUserAccessResponse {

}

message GetUserTokenRequest {
  string login = 1;
  string password = 2;
}

message GetUserTokenResponse {
  bytes token = 1;
}

message CheckUserAccessRequest {
  string resource_id = 1;
}

message CheckUserAccessResponse {
  bool ok = 1;
}


message DeleteUserTokenRequest {
  string login = 1;
  string password = 2;
}

message DeleteUserTokenResponse {
}
