syntax = "proto3";

package online_shop.passport.v1;

import "github.com/lvlBA/online_shop/api/v1/pagination.proto";

option go_package = "github.com/lvlBA/online_shop/passport;passport";

service ResourceService {
  rpc CreateResource (CreateResourceRequest) returns (CreateResourceResponse){}
  rpc GetResource (GetResourceRequest) returns (GetResourceResponse){}
  rpc DeleteResource (DeleteResourceRequest) returns (DeleteResourceResponse){}
  rpc ListResource (ListResourceRequest) returns (ListResourceResponse){}
}

message Resource {
  string id = 1;
  string urn = 2;
}

message CreateResourceRequest {
  string urn = 1;
}

message CreateResourceResponse {
  Resource resource = 1;
}

message GetResourceRequest {
  string id = 1;
}

message GetResourceResponse {
  Resource resource = 1;
}

message DeleteResourceRequest {
  string id = 1;
}

message DeleteResourceResponse {
}

message ListResourceRequest {
  online_shop.api.Pagination pagination = 1;
}

message ListResourceResponse {
  repeated Resource resource = 1;
}
